@@ -54,6 +54,7 @@ CHANGES IN FLTK 1.3.4					RELEASED: ??? ?? ????
 
 	Bug fixes
 
+	- Fixed missing image release in fluid (STR #2840).
 	- Fixed out-of-bounds memory access in fluid (STR #3263).
 	- fluid doesn't output trailing white space in .fl files after
 	  some statements anymore (STR #3239).
